<resources>
    <string name="app_name">Helply</string>
    <string name="new_nick">New nick</string>
    <string name="change_nick">CHANGE NICK</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="avatar">avatar</string>
    <string name="choose">Choose new avatar</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="app_logo">app_logo</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone number</string>
    <string name="i_agree_the_general_terms_of_use">I agree the General Terms of Use.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dog_breed">Breed of the dog</string>
    <string name="shopping_list">Create a shopping list</string>
    <string name="kind_need">The kind of help you need</string>

    <string name="my_api_key">AIzaSyDWXXd1pnckpXzVzTJyfJQHaf4lQ9dDuaI</string>
    <string name="kind_of_help">Kind of help</string>
    <string name="change_address">Press to change your address</string>
    <string name="change_shopping_list">Change your shopping list</string>
    <string name="change_list">Change your list</string>
</resources>