<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_drawer_layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<!---->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/quantum_orange400"
                    app:cardCornerRadius="25dp">
<!---->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
<!---->
                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/kind_of_help"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
<!---->
                        <TextView
                            android:id="@+id/kindHelpTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="KindOfHelp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.503"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
<!---->
                </androidx.cardview.widget.CardView>
<!---->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/quantum_orange400"
                    app:cardCornerRadius="25dp">
<!---->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
<!---->
                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="Address"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
<!---->
                        <TextView
                            android:id="@+id/addressTaskTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="TaskAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />
<!---->
<!---->
                    </androidx.constraintlayout.widget.ConstraintLayout>
<!---->
                </androidx.cardview.widget.CardView>
<!---->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/quantum_orange400"
                    app:cardCornerRadius="25dp">
<!---->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
<!---->
                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="Phone number or email"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
<!---->
                        <TextView
                            android:id="@+id/emailPhoneTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Text num or email"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView11" />
<!---->
                    </androidx.constraintlayout.widget.ConstraintLayout>
<!---->
                </androidx.cardview.widget.CardView>
<!---->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="220dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/quantum_orange400"
                    app:cardCornerRadius="25dp">
<!---->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
<!---->
                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Description"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
<!---->
                        <TextView
                            android:id="@+id/desTV"
                            android:layout_width="254dp"
                            android:layout_height="105dp"
                            android:layout_marginBottom="16dp"
                            android:text="Description"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.495"
                            app:layout_constraintStart_toStartOf="parent" />
<!---->
                    </androidx.constraintlayout.widget.ConstraintLayout>
<!---->
                </androidx.cardview.widget.CardView>
<!---->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="370dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/quantum_orange400"
                    app:cardCornerRadius="25dp">
<!---->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
<!---->
                        <TextView
                            android:id="@+id/informactionBreadTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dog_breed"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
<!---->
                        <TextView
                            android:id="@+id/dogBreedTV"
                            android:layout_width="90dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="10dp"
                            android:text="dogbreed"
                            android:visibility="invisible"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/informactionBreadTV" />
<!---->
                        <TextView
                            android:id="@+id/shoppingListTV"
                            android:layout_width="232dp"
                            android:layout_height="134dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/shopping_list"
                            android:visibility="invisible"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/informactionBreadTV" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
<!---->
                </androidx.cardview.widget.CardView>
<!---->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="460dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/quantum_orange400"
                    app:cardCornerRadius="25dp">
<!---->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
<!---->
                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="Annoucement date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
<!---->
                        <TextView
                            android:id="@+id/dateTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="4dp"
                            android:text="TextView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView6" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
<!---->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="530dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/quantum_orange400"
                    app:cardCornerRadius="25dp">
<!---->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
<!---->
                        <Button
                            android:id="@+id/addBtn"
                            android:layout_width="120dp"
                            android:layout_height="41dp"
                            android:layout_marginBottom="8dp"
                            android:text="Take announcement"
                            android:textAllCaps="false"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
<!---->
            </RelativeLayout>


        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/quantum_orange300"
        android:fitsSystemWindows="true">
        <!--        app:headerLayout="@layout/sidebar_header">-->

        <include
            layout="@layout/sidebar_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp" />

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>